--- a/stage7/announcements.yaml
+++ b/stage7/announcements.yaml
@@ -4,9 +4,9 @@ info:
   description: 提供最新公告列表與公告詳細內容，回應結構採 Cloudflare API 慣例
   version: 1.0.0
 servers:
-  - url: https://ndltd.ncl.edu.tw
+  - url: https://ndltd.ncl.edu.tw/api/v1
 paths:
-  /api/announcements:
+  /announcements:
     get:
       summary: 取得最新公告列表
       description: 取得最新公告，顯示短內容 summary
@@ -158,7 +158,7 @@ paths:
                   result:
                     nullable: true
 
-  /api/announcements/{id}:
+  /announcements/{id}:
     get:
       summary: 取得公告詳細內容
       description: 依公告 id 取得完整公告內容
